Quadrat: Fix mobile spacing

--- a/quadrat/sass/theme.scss
+++ b/quadrat/sass/theme.scss
@@ -25,3 +25,12 @@
 @import "templates/meta";
 @import "templates/post-header";
 @import "templates/query";
+
+.wp-block-post-featured-image {
+	margin-top: 0;
+}
+
+.page-content {
+	padding-left: var(--wp--custom--post-content--padding--left);
+	padding-right: var(--wp--custom--post-content--padding--right);
+}
